--- a/src/main/resources/templates/SignUpPage.html
+++ b/src/main/resources/templates/SignUpPage.html
@@ -13,7 +13,7 @@
           th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css}"
           rel="stylesheet"/>
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../static/css/styles.css" rel="stylesheet"/>
+    <link th:href="@{/css/styles.css}" rel="stylesheet"/>    
 </head>
 <body>
 <!-- Navigation-->
