--- a/src/main/resources/templates/SignUpPage.html
+++ b/src/main/resources/templates/SignUpPage.html
@@ -23,7 +23,7 @@
 
 
 <div class="container">
-    <form style="margin: 50px;" class="form-control" method="post" id="SignUp" action="/signup">
+    <form style="margin: 50px;" class="form-control" method="post" id="SignUp" action="/user/signup">
         <div class="mb-3">
             <label class="form-label" for ="email" >아이디(이메일 주소)</label>
             <div class="col-sm-3">
@@ -36,16 +36,18 @@
                 <input type="password" class="form-control" name="password" >
             </div>
         </div>
+        <!--
         <div class="mb-3">
             <label class="form-label">비밀번호 확인 </label>
             <div class="col-sm-3">
                 <input type="password" class="form-control" name="confirmPassword" id="confirmPassword">
             </div>
         </div>
+        -->
         <div class="mb-3">
             <label class="form-label">이름 </label>
             <div class="col-sm-3">
-                <input type="text" class="form-control" name="userName" >
+                <input type="text" class="form-control" name="nickname" >
             </div>
         </div>
 
